[gd_scene load_steps=2 format=3 uid="uid://c7ey6xd435ssl"]

[ext_resource type="Script" path="res://home.gd" id="1_w2we2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2we2")

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.25
anchor_top = 0.847273
anchor_right = 0.75
anchor_bottom = 0.919545
grow_vertical = 2
theme_override_font_sizes/font_size = 50
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 2000

[node name="LineEdit" type="LineEdit" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 200.0
offset_top = 250.0
offset_right = 880.0
offset_bottom = 401.0
theme_override_font_sizes/font_size = 80
text = "Guess"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1600.0
offset_right = -810.0
offset_bottom = -544.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
min_value = 10.0
value = 10.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="changed" from="HSlider" to="." method="_on_h_slider_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_changed"]
